# enum-table

./: .gitignore  .markdownlint-cli2.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  update.py
.github/workflows/: changelog.yaml
enum-table/: Cargo.toml
enum-table-derive/: Cargo.toml
enum-table-derive/src/: lib.rs
enum-table/benches/: main.rs
enum-table/src/: builder.rs  impls.rs  intrinsics.rs  lib.rs  macros.rs
enum-table/src/impls/: core.rs  iter.rs  map.rs  mod.rs  serde.rs  std.rs  vec.rs
enum-table/tests/: normal.rs
src/: builder.rs  impls.rs  lib.rs  macros.rs
tests/: normal.rs
