[workspace]
members = ["enum-table", "enum-table-derive"]
resolver = "2"

[workspace.package]
version = "2.1.1"


edition = "2024"
rust-version = "1.85"
description = "A library for creating tables with enums as key."
authors = ["Moriyoshi Kasuga <moriyoshi.kasuga1218@gmail.com>"]
repository = "https://github.com/moriyoshi-kasuga/enum-table"
license = "MIT"
readme = "README.md"
categories = ["data-structures"]
keywords = ["enum", "map"]

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
