[package]
name = "enum-table"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A library for creating tables with enums as key."
authors.workspace = true
repository.workspace = true
readme = "../README.md"
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "enum_table"

[features]
default = ["derive"]
derive = ["dep:enum-table-derive"]
serde = ["dep:serde"]

[dependencies]
enum-table-derive = { version = "^0", path = "../enum-table-derive", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = [
  "derive",
] }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.6"

[lints]
workspace = true

[[bench]]
name = "main"
harness = false
