[package]
name = "enum-table"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A library for creating tables with enums as key."
authors.workspace = true
repository.workspace = true
readme = "../README.md"
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "enum_table"

[features]
default = ["std", "derive"]
derive = ["dep:enum-table-derive"]
serde = ["dep:serde"]

std = ["alloc"]
alloc = []

[dependencies]
enum-table-derive = { version = "^2", path = "../enum-table-derive", optional = true }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.6"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true

[[bench]]
name = "main"
harness = false
